# nac-ise-simple-example

./: README.md  main.tf
data/: trustsec.nac.yaml
tools/: matrix-example.xlsx
tools/nac-ise/: README.md  pyproject.toml
tools/nac-ise/nac_ise/: import_matrix.py  main.py
